# komodo

./: .gitignore  .markdownlint-cli2.yaml  404.html  Cargo.toml  index.html  mprocs.yaml  package.json  readme.md  runfile.toml  search-index.json  search.html  sitemap.xml  test_maintenance.md
.cargo/: config.toml
.devcontainer/: dev.compose.yaml  devcontainer.json
.github/: copilot-instructions.md
assets/css/: styles.1906ceb0.css  styles.ec6293c3.css
assets/js/: 0058b4c6.8706d84d.js  0058b4c6.a423bc5f.js  0e384e19.5506d43c.js  0e384e19.a5a052fa.js  0e38c797.c13942ad.js  0e38c797.c960b06f.js  0f079b47.6650f8e8.js  0f079b47.768a1f0c.js  12d1b99a.f8f0588e.js  138e0e15.cd653e4a.js  16c99604.856c5d78.js  16c99604.c59787aa.js  16c99604.fae2dfe6.js  17896441.ca4d3cf2.js  17896441.dbe05b81.js  19608e5d.c443ed61.js  19608e5d.eae1ce51.js  1a4e3797.d024cb79.js  1a7a1dba.9e14efea.js  1bd19f0c.45db0185.js  1bd19f0c.8806f020.js  1bd19f0c.8b291786.js  1df93b7f.683b1542.js  1df93b7f.ee914b6f.js  1efd6ccb.2f5799ef.js  237.0bd7ad3c.js  237.81a2e61a.js  2e7f2839.322f45ad.js  311cbe01.94b9211e.js  357.50ad59e9.js  3bb59ffd.5bcb0518.js  3bb59ffd.6c44b275.js  3bb59ffd.f0b24f57.js  3d2be5a4.c2a4fe01.js  489.35969693.js  4a73cd02.50e8596a.js  518.a3eeed39.js  540.d8cc415a.js  5514a8d7.850b33b8.js  5e95c892.3354df32.js  (+76 more)
client/core/rs/: Cargo.toml
client/core/rs/src/: lib.rs  openapi.rs  request.rs  terminal.rs
client/core/rs/src/api/: auth.rs  mod.rs  pty.rs  terminal.rs  user.rs
client/core/rs/src/api/execute/: action.rs  alerter.rs  build.rs  deployment.rs  maintenance.rs  mod.rs  openapi.rs  procedure.rs  repo.rs  server.rs  stack.rs  swarm.rs  sync.rs
client/core/rs/src/api/read/: action.rs  alert.rs  alerter.rs  build.rs  builder.rs  deployment.rs  docker.rs  log_recording.rs  mod.rs  onboarding_key.rs  permission.rs  procedure.rs  provider.rs  repo.rs  schedule.rs  server.rs  stack.rs  swarm.rs  sync.rs  tag.rs  terminal.rs  toml.rs  update.rs  user.rs  user_group.rs  variable.rs
client/core/rs/src/api/write/: action.rs  alert.rs  alerter.rs  api_key.rs  build.rs  builder.rs  deployment.rs  log_recording.rs  mod.rs  onboarding_key.rs  openapi.rs  permissions.rs  procedure.rs  provider.rs  repo.rs  resource.rs  server.rs  stack.rs  swarm.rs  sync.rs  tags.rs  terminal.rs  user.rs  user_group.rs  variable.rs
client/core/rs/src/deserializers/: command.rs  mod.rs  permission.rs
client/core/rs/src/entities/: action.rs  alert.rs  alerter.rs  api_key.rs  build.rs  builder.rs  deployment.rs  log_recording.rs  logger.rs  mod.rs  onboarding_key.rs  permission.rs  procedure.rs  provider.rs  repo.rs  resource.rs  schedule.rs  server.rs  stack.rs  stats.rs  swarm.rs  sync.rs  tag.rs  terminal.rs  toml.rs  update.rs  user.rs  user_group.rs  variable.rs
client/core/rs/src/entities/config/: core.rs  mod.rs  periphery.rs
client/core/rs/src/entities/config/cli/args/: create.rs  mod.rs
client/core/rs/src/entities/docker/: config.rs  container.rs  image.rs  mod.rs  network.rs  node.rs  secret.rs  service.rs  stack.rs  stats.rs  swarm.rs  task.rs  volume.rs
client/core/rs/src/ws/: mod.rs
client/core/ts/: README.md  generate_types.mjs  package.json
client/periphery/rs/: Cargo.toml
compose/: compose.env  ferretdb.compose.yaml  mongo.compose.yaml  periphery.compose.yaml  postgres.compose.yaml  sqlite.compose.yaml
config/: core.config.toml  periphery.config.toml
deploy/: komodo.ts
docs/: build-images.html  build.html  ecosystem.html  intro.html  resources.html  setup.html  swarm.html  terminals.html
docs/automate/: procedures.html  schedules.html  sync-resources.html  webhooks.html
docs/configuration/: permissioning.html  providers.html  variables.html
docs/deploy/: auto-update.html  compose.html  containers.html
docs/ecosystem/: api.html  cli.html  community.html  development.html
docs/releases/: v2.0.0.html
docs/resources/: auto-update.html  deploy-containers.html  docker-compose.html  permissioning.html  procedures.html  sync-resources.html  variables.html  webhooks.html
docs/resources/build-images/: builders.html  configuration.html  pre-build.html  versioning.html
docs/resources/deploy-containers/: configuration.html  lifetime-management.html
docs/setup/: advanced.html  backup.html  connect-servers.html  ferretdb.html  mongo.html  version-upgrades.html
docsite/: Dockerfile  docusaurus.config.ts  package.json  runfile.toml  sidebars.ts
docsite/docs/: alerter.md  build.md  connect-servers.mdx  connection-model.md  core.md  database.md  host-model.md  index.md  intro.md  other-resources.md  periphery.md  permissioning.md  repo.md  resources.md  server.md  swarm.md  sync-resources.md  terminals.md
docsite/docs/automate/: procedures.md  schedules.md  sync-resources.md  webhooks.md
docsite/docs/build-images/: builders.md  configuration.md
docsite/docs/configuration/: permissioning.md  (+2 more)
example/alerter/: Dockerfile
example/update_logger/: Dockerfile
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: index.d.ts
frontend/src/: globals.css  router.tsx
lib/command/: Cargo.toml
lib/environment/: Cargo.toml
lib/noise/: Cargo.toml
lib/transport/: Cargo.toml
scripts/: build-musl.sh  install-musl.sh  setup-periphery.py
ui/: Dockerfile  README.md  package.json  postcss.config.cjs  runfile.toml  tsconfig.json  vite.config.ts
ui/src/: index.scss  main.tsx  router.tsx  theme.scss  theme.ts
(+563 files in other folders)
