[package]
name = "komodo_client"
description = "Client for the Komodo build and deployment system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
blocking = ["reqwest/blocking"]
mongo = ["dep:mongo_indexed"]
utoipa = ["dep:utoipa", "serror/utoipa"]
logger = ["dep:logger"]
cli = ["dep:pki", "logger"]
core = ["mongo", "utoipa", "logger", "dep:mogh_server"]
periphery = ["cli", "dep:ipnetwork", "dep:mogh_server"]

[dependencies]
# mogh
mongo_indexed = { workspace = true, optional = true }
logger = { workspace = true, optional = true }
serror = { workspace = true, features = ["axum"] }
pki = { workspace = true, optional = true, features = ["cli"] }
mogh_server = { workspace = true, optional = true }
derive_default_builder.workspace = true
derive_empty_traits.workspace = true
async_timing_util.workspace = true
mogh_auth_client.workspace = true
partial_derive2.workspace = true
resolver_api.workspace = true
# external
ipnetwork = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
tokio-tungstenite.workspace = true
derive_builder.workspace = true
futures-util.workspace = true
urlencoding.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
typeshare.workspace = true
indexmap.workspace = true
serde_qs.workspace = true
reqwest.workspace = true
tracing.workspace = true
anyhow.workspace = true
bytes.workspace = true
serde.workspace = true
tokio.workspace = true
strum.workspace = true
bson.workspace = true
clap.workspace = true
envy.workspace = true
rand.workspace = true